add_subdirectory (common)
message ($ENV{CRAEBOT_ENV})

if ($ENV{CRAEBOT_ENV} STREQUAL "dev")
	add_subdirectory (joystick)
    add_subdirectory (teleop)
    add_subdirectory (tests)
    add_subdirectory (driver)
elseif ($ENV{CRAEBOT_ENV} STREQUAL "teleop")
    add_subdirectory (joystick)
    add_subdirectory (teleop)
    add_subdirectory (tests)
elseif ($ENV{CRAEBOT_ENV} STREQUAL "craebot")
    add_subdirectory (driver)
endif ()
